Add global style, minimal fix in style, change ang mat on base input

--- a/btmetacrit/src/components/search-bar-component/search-bar-component.html
+++ b/btmetacrit/src/components/search-bar-component/search-bar-component.html
@@ -1,4 +1,4 @@
-<mat-form-field class="example-form-field">
-  <mat-label><i class="fa-solid fa-magnifying-glass"></i></mat-label>
-  <input matInput type="text" [formControl]="validationForm" [(ngModel)]='value'>
-</mat-form-field>
+<div class="search-bar">
+  <label for="search-bar-input"><i class="fa-solid fa-magnifying-glass"></i></label>
+  <input name="search-bar-input" type="text" [formControl]="validationForm" [(ngModel)]='value'>
+</div>
