--- a/btmetacrit/src/components/header-component/header-component.scss
+++ b/btmetacrit/src/components/header-component/header-component.scss
@@ -1,10 +1,30 @@
-@import url('../../assets/global/_fonts.scss');
-@import url('../../assets/global/_variable.scss');
+@import "../../mixin.scss";
+
 :host{
-    background-color: $base-color;
+    background-color: usecolor(basic);
     position: fixed;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    gap: 1;
     width: 100%;
-    height: 200px;
+    height: 80px;
+    padding-right: 20px;
+    padding-left: 20px;
 }
+.right-part{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+.right-part-hints{
+    display: flex;
+    flex-direction: row;
+}
+app-search-bar-component{
+    margin-right: 10%;
+}
+app-title-hints-component{
+    margin-right: 30px;
+}  
+
