End layouting header

--- a/btmetacrit/src/components/header-component/header-component.html
+++ b/btmetacrit/src/components/header-component/header-component.html
@@ -6,6 +6,9 @@
     }
     </div>
 </div>
-<button class="auth-button" type="button">
-    <i class="fa-solid fa-user"></i>
-</button>
+<div class="left-part">
+    <button class="left-part__button-auth" type="button">
+        <i class="fa-solid fa-user"></i>
+    </button>
+</div>
+
