--- a/btmetacrit/src/components/header-component/header-component.scss
+++ b/btmetacrit/src/components/header-component/header-component.scss
@@ -5,11 +5,11 @@
     position: fixed;
     display: flex;
     justify-content: space-between;
-    gap: 1;
+    gap: 1px;
     width: 100%;
     height: 80px;
     padding-right: 20px;
-    padding-left: 20px;
+    padding-left: 30px;
 }
 .right-part{
     display: flex;
@@ -20,6 +20,32 @@
 .right-part-hints{
     display: flex;
     flex-direction: row;
+}
+.left-part{
+    width: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.left-part button{
+    background-color: usecolor(for_button_auth);
+    width: 50px;
+    height: 50px;
+    border: none;
+    opacity: 1;
+    border-radius: 30px;
+}
+.left-part button:hover{
+    background-color: usecolor(for_button_auth);
+    opacity: 0.8;
+}
+.left-part button:active{
+    background-color: usecolor(for_button_auth);
+    opacity: 0.4;
+}
+.left-part button i {
+    color: white;
+    font-size: 24px;
 }
 app-search-bar-component{
     margin-right: 10%;
