--- a/btmetacrit/src/components/search-bar-component/search-bar-component.scss
+++ b/btmetacrit/src/components/search-bar-component/search-bar-component.scss
@@ -1,6 +1,18 @@
 .search-bar{
+    border: none;
+    background-color: rgb(168, 167, 167);
     border-radius: 20px;
+    display: flex;
+    flex-direction: row;
+    padding-right: 10px;
+    padding-left: 5px;
 }
-.search-bar label{
-    position: absolute;
+.search-bar input{
+    background-color: rgb(168, 167, 167);
+    border: none;
+}
+.search-bar input:focus{
+    background-color: rgb(168, 167, 167);
+    outline: none;
+    border: none;
 }
