--- a/btmetacrit/src/styles.scss
+++ b/btmetacrit/src/styles.scss
@@ -5,6 +5,9 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css');
 :root{
   --color-basic: #938F86;
+  --color-for_font_light: #ffffff;
+  --color-for_font_dark: black;
+  --color-for_button_auth: black;
 }
 html {
   @include mat.theme((
