--- a/btmetacrit/src/styles.scss
+++ b/btmetacrit/src/styles.scss
@@ -5,6 +5,10 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css');
 :root{
   --color-basic: #938F86;
+  --color-basic_dark: #78705F;
+  --color-for_good_rating: #0BFF38;
+  --color-for_bad_rating: #D8000C;
+  --color-for_middle_rating: #FFC659;
   --color-for_font_light: #ffffff;
   --color-for_font_dark: black;
   --color-for_button_auth: black;
