--- a/btmetacrit/src/components/game-component/game-component.scss
+++ b/btmetacrit/src/components/game-component/game-component.scss
@@ -1,6 +1,7 @@
 @import "../../mixin.scss";
 :host{
-    margin-right: 40px;
+    margin-right: 20px;
+    margin-left: 20px;
     width: 15vw;
     background-color: usecolor(basic_dark);
     border-radius: 10px 10px 0px 0px;
@@ -10,8 +11,8 @@
     transition: transform 0.3s ease;
 }
 :host:hover{
-    transform: scale(1.1);
-    box-shadow: 0px -13px 14px 1px rgba(13, 23, 31, 0.2);
+    opacity: 0.9;
+    box-shadow: 0px -13px 14px 1px rgba(18, 31, 41, 0.2);
 }
 :host:active{
     opacity: 0.8;
@@ -61,6 +62,7 @@
 .container-info-button-like:active{
     background-color: plum;
     // think about move button on tooltip
+
 }
 
 .container-info-button-like i {
