Do make up caption

--- a/btmetacrit/src/components/caption-component/caption-component.html
+++ b/btmetacrit/src/components/caption-component/caption-component.html
@@ -1,5 +1,5 @@
 <div class="caption-container">
-    <h2 class="title">{{title()}}</h2>
-    <a [routerLink]="rootForLink()">see all</a>
+    <div class="title"> <h2>{{title()}}</h2> </div> 
+    <div class="link"> <a [routerLink]="rootForLink()">see all</a> </div>
 </div>
 
