--- a/btmetacrit/src/components/slider-component/slider-component.html
+++ b/btmetacrit/src/components/slider-component/slider-component.html
@@ -3,15 +3,7 @@
   [ngTemplateOutlet]="buttonSlider" 
   [ngTemplateOutletContext]="{ rotate: 0, offset: -1 }"/>
 <div class="box">
-@for(so of objects();track so.id){
-    @if(centerIndex() === so.id){
-     <app-game-component [imageLink]="so.imageLink" [isCenter]="true" [rating]="so.rating" [title]="so.title"/>
-    }
-    @else {
-     <app-game-component [imageLink]="so.imageLink" [isCenter]="false" [rating]="so.rating" [title]="so.title"/>
-    }
-
-}
+  <app-game-group-component [activeIndex]="centerIndex()" [sliderGroups]="map()"/>
 </div>
 <ng-container 
   [ngTemplateOutlet]="buttonSlider" 
