--- a/btmetacrit/src/components/game-group-component/game-group-component.html
+++ b/btmetacrit/src/components/game-group-component/game-group-component.html
@@ -1,17 +1,15 @@
 
 @for(obj of sliderGroups(); track obj.id){
-    <ul class="group">
+    <div class="group">
     @for(item of obj.sliderObjects; track item.id){
-        <li class="group-item"> 
-            @if(isActive(obj.id)){
-                <app-game-component [imageLink]="item.imageLink" [rating]="item.rating"  [style.display]="'block'" [title]="item.title"/>
-            }
-            @else {
-                <app-game-component [imageLink]="item.imageLink" [rating]="item.rating"  [style.display]="'flex'" [title]="item.title"/>
-            }
-        </li>
+        @if(isActive(obj.id)){
+            <app-game-component @slideIn class="active-el" [imageLink]="item.imageLink" [rating]="item.rating"   [title]="item.title"/>
+        }
+        @else {
+            <app-game-component @slideOut class="passive-el" [imageLink]="item.imageLink" [rating]="item.rating"   [title]="item.title"/>
+        }
     }
-    </ul>
+</div>
 }
 
 {{log()}}
