--- a/btmetacrit/src/components/slider-component/slider-component.scss
+++ b/btmetacrit/src/components/slider-component/slider-component.scss
@@ -11,7 +11,8 @@
 
 .box {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
     flex-direction: row;
 }
 .button-container{
