--- a/btmetacrit/src/components/auth/auth-form-component/auth-form-component.html
+++ b/btmetacrit/src/components/auth/auth-form-component/auth-form-component.html
@@ -1,9 +1,9 @@
 <form class="auth_form" [formGroup]="authForm" (ngSubmit)="submit()">
     @for(fi of authArray(); track fi.id){
-        <label class="auth_form_title" >
-            {{takeANormal(fi.name)}}
-             <input class="auth_form_input" [formControlName]="fi.name" [id]="fi.name" [name]="fi.name" [type]="fi.type">
-        </label>
+        <div class="auth_form_item">
+            <label  class="auth_form_label" for="item_input"> {{takeANormal(fi.name)}} </label>
+            <input class="auth_form_item_input" id="item_input" [formControlName]="fi.name" [id]="fi.name" [name]="fi.name" [type]="fi.type">
+        </div>
     }
     <button type="submit">{{takeANormal(name())}}</button>
 </form>
