--- a/btmetacrit/src/components/auth/auth-pop-up-component/auth-pop-up-component.html
+++ b/btmetacrit/src/components/auth/auth-pop-up-component/auth-pop-up-component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div @show class="container">
     <div class="title">
     <img alt="#" height="30"  priority="" src='../../../assets/img/logoSiteMetacrit.png' width="40">
     <h3>metacrit</h3>
@@ -23,7 +23,7 @@
 <div class="description">
     <p>Let`s go to create a free account on BT metacritic</p>
 </div>
-<app-auth-form-component [name]="option()"/>
+<app-auth-form-component class="auth_form" [name]="option()"/>
 </div>
 
 
