--- a/btmetacrit/src/components/header/header-component/header-component.html
+++ b/btmetacrit/src/components/header/header-component/header-component.html
@@ -7,7 +7,7 @@
     </div>
 </div>
 <div class="left-part">
-    <button class="left-part__button-auth" type="button">
+    <button class="left-part__button-auth" type="button" (click)="onClick()">
         <i class="fa-solid fa-user"></i>
     </button>
 </div>
