--- a/btmetacrit/src/components/header/header-component/header-component.scss
+++ b/btmetacrit/src/components/header/header-component/header-component.scss
@@ -35,6 +35,7 @@
     border-radius: 30px;
 }
 .left-part button:hover{
+    cursor: pointer;
     background-color: usecolor(for_button_auth);
     opacity: 0.8;
 }
