--- a/btmetacrit/src/components/auth/auth-pop-up-component/auth-pop-up-component.scss
+++ b/btmetacrit/src/components/auth/auth-pop-up-component/auth-pop-up-component.scss
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     position: absolute;
-    top: 20%; // translate on 
+    top: 20%; 
     width: 100%;
     align-items: center;
 }
@@ -16,8 +16,41 @@
     align-items: center;
     border-radius: 10px;
 }
+.container-up{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%
+}
+.container-up_button{
+    width: 30%;
+    display: flex;
+    justify-content: end;
+    padding-bottom: 20px;
+    padding-right: 10px;
+}
+.close_button{
+    border: none;
+    background-color: #dad7d3;
+    height: 20px;
+    width: 20px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.close_button:hover{
+    opacity: 0.8;
+    cursor: pointer;
+}
+.close_button:active{
+    opacity: 0.6;
+}
 .title{
     display: flex;
+    width: 60%;
+    justify-content: end;
 }
 .title h3{
     font-weight: 700;
@@ -44,6 +77,7 @@
 input {
   opacity: 0; 
   position: absolute; 
+  cursor: pointer;
   width: 100%;
 }
 .radio_group_item_login, .radio_group_item_reg{
