--- a/btmetacrit/src/components/user/user-info-component/user-info-component.html
+++ b/btmetacrit/src/components/user/user-info-component/user-info-component.html
@@ -1,11 +1,11 @@
 <div class="left">
-    <img alt="#" class="user_img" [src]="imgPath"/>
+    <img alt="#" class="user_img" height="50" width="70" [src]="imgPath()"/>
     <div class="info">
     <h4 class="info_name">
-
+        {{fullName()}}
     </h4>
     <p class="info_gmail">
-
+        {{mail()}}
     </p>
     </div>
 </div>
