--- a/btmetacrit/src/app/app.html
+++ b/btmetacrit/src/app/app.html
@@ -1,3 +1,3 @@
 <app-header-component [allHints]="baseHints"/>
-<app-user-page-component/>
+<a [routerLink]="['/user', 1]">Click to redirect on user</a>
 <router-outlet/>
