--- a/btmetacrit/src/components/main/caption-component/caption-component.html
+++ b/btmetacrit/src/components/main/caption-component/caption-component.html
@@ -1,5 +1,7 @@
 <div class="caption-container">
     <div class="title"> <h2>{{title()}}</h2> </div> 
-    <div class="link"> <a [routerLink]="rootForLink()">see all</a> </div>
+    @if(isHasLink()){
+     <div class="link"> <a [routerLink]="rootForLink()">see all</a> </div>
+    }
 </div>
 
