--- a/btmetacrit/src/components/user/user-info-input-component/user-info-input-component.html
+++ b/btmetacrit/src/components/user/user-info-input-component/user-info-input-component.html
@@ -1,4 +1,7 @@
-<label class="name_field" for="f_input"></label>
+<div class="container">
+    <label class="name_field" for="f_input">{{takeANormal(baseParam()!.toString())}}</label>
 
-<input class="input_field" id="f_input" [placeholder]="baseParam()" [type]="type()" [(ngModel)]="model" >
+    <input class="input_field" id="f_input" [placeholder]="value()" [type]="type()" [(ngModel)]="model" >
+</div>
+
 
