--- a/btmetacrit/src/components/user/user-page-component/user-page-component.html
+++ b/btmetacrit/src/components/user/user-page-component/user-page-component.html
@@ -1,1 +1,13 @@
 <app-user-info-component [fullName]="fname()" [imgPath]="img()" [mail]="email()"/>
+<app-caption-component class="caption" [isHasLink]="false" [orientation]="'start'"><p #title>About User</p></app-caption-component>
+<div class="user-info">
+    @for(item of userTypeMap(); track item[0]){
+    <app-user-info-input-component [baseParam]="item[0]" [type]="getType(item[0])" [value]="item[1]"/>
+}
+</div>
+<app-button-component class="app_button" [styles]="styles" [type]="'button'"><p #title>Save Changes</p></app-button-component>
+<app-caption-component class="caption" [isHasLink]="false" [orientation]="'start'"><p #title>You see it</p></app-caption-component>
+<app-slider-component [maxLengthCell]="6" />
+
+
+
