--- a/btmetacrit/src/styles.scss
+++ b/btmetacrit/src/styles.scss
@@ -14,6 +14,7 @@
   --color-for_button_auth: black;
   --color-for_general_button: 'rgba(175, 143, 72, 0.24)';
   --font-for_general_button: 'Inter'
+  --font-general: 'Roboto'
 }
 html {
   @include mat.theme((
