Make see section for user page

--- a/btmetacrit/src/components/header/header-component/header-component.scss
+++ b/btmetacrit/src/components/header/header-component/header-component.scss
@@ -4,8 +4,7 @@
     background-color: usecolor(basic);
     display: flex;
     justify-content: space-between;
-    gap: 1px;
-    width: 100%;
+    width: 95vw;
     height: 80px;
     padding-right: 20px;
     padding-left: 30px;
