--- a/btmetacrit/src/components/user/user-page-component/user-page-component.html
+++ b/btmetacrit/src/components/user/user-page-component/user-page-component.html
@@ -6,8 +6,13 @@
 }
 </div>
 <app-button-component class="app_button" [styles]="styles" [type]="'button'"><p #title>Save Changes</p></app-button-component>
+
 <app-caption-component class="caption" [isHasLink]="false" [orientation]="'start'"><p #title>You see it</p></app-caption-component>
-<app-slider-component [maxLengthCell]="6" />
+<app-slider-component [maxLengthCell]="2" [objects]="mapToSlider(0)" [orientation]="'start'"/>
+
+<app-caption-component class="caption" [isHasLink]="false" [orientation]="'start'"><p #title>You like it</p></app-caption-component>
+<!-- Liked component -->
+
 
 
 
