--- a/btmetacrit/src/components/header/header-component/header-component.scss
+++ b/btmetacrit/src/components/header/header-component/header-component.scss
@@ -4,10 +4,12 @@
     background-color: usecolor(basic);
     display: flex;
     justify-content: space-between;
-    width: 95vw;
+    width: 100%;
+    margin: 0;
     height: 80px;
     padding-right: 20px;
     padding-left: 30px;
+    box-sizing: border-box
 }
 .right-part{
     display: flex;
