--- a/btmetacrit/src/components/auth/auth-pop-up-component/auth-pop-up-component.scss
+++ b/btmetacrit/src/components/auth/auth-pop-up-component/auth-pop-up-component.scss
@@ -1,107 +1,117 @@
 @import "../../../mixin.scss";
-:host{
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    top: 20%; 
-    width: 100%;
-    align-items: center;
+:host {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  top: 20%;
+  width: 98vw;
+  align-items: center;
 }
-.container{
-    background-color: #D2CFC9;
-    width: 25%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
+.container {
+  background-color: #d2cfc9;
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
 }
-.container-up{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%
-}
-.container-up_button{
-    width: 30%;
-    display: flex;
-    justify-content: end;
-    padding-bottom: 20px;
-    padding-right: 10px;
-}
-.close_button{
-    border: none;
-    background-color: #dad7d3;
-    height: 20px;
-    width: 20px;
-    border-radius: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.close_button:hover{
-    opacity: 0.8;
-    cursor: pointer;
-}
-.close_button:active{
-    opacity: 0.6;
-}
-.title{
-    display: flex;
-    width: 60%;
-    justify-content: end;
-}
-.title h3{
-    font-weight: 700;
-}
-.title img{
-    margin-top: 7px;
-}
-.description{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-}
-.description p {
-    text-align: center;
-}
-.radio_group{
-    background-color: #D9D9D9;
-    padding: 10px;
-    padding-left: 40px;
-    padding-right: 40px;
-    border-radius: 20px;
-}
-input {
-  opacity: 0; 
-  position: absolute; 
-  cursor: pointer;
+.container-up {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
 }
-.radio_group_item_login, .radio_group_item_reg{
-    padding: 10px;
-    padding-right: 20px;
-    padding-left: 20px;
-    background-color: #D9D9D9;
-    color: usecolor(for_font_dark);
-    font-weight: bold;
+.container-up_button {
+  width: 30%;
+  display: flex;
+  justify-content: end;
+  padding-bottom: 20px;
+  padding-right: 10px;
 }
-.radio_group_item_login:hover, .radio_group_item_reg:hover{
-    opacity: 0.8;
+.close_button {
+  border: none;
+  background-color: #dad7d3;
+  height: 20px;
+  width: 20px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.radio_group_item_login:active, .radio_group_item_reg:active{
-    opacity: 0.4;
+.close_button:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+.close_button:active {
+  opacity: 0.6;
+}
+.title {
+  display: flex;
+  width: 60%;
+  justify-content: end;
+}
+.title h3 {
+  font-weight: 700;
+}
+.title img {
+  margin-top: 7px;
+}
+.description {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+.description p {
+  text-align: center;
+}
+.radio_group {
+  background-color: #d9d9d9;
+  box-sizing: border-box;
+  padding: 10px;
+  padding-left: 40px;
+  padding-right: 40px;
+  border-radius: 20px;
+}
+input {
+  opacity: 0;
+  position: absolute;
+  cursor: pointer;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  width: 160px;
+}
+.radio_group_item_login,
+.radio_group_item_reg {
+  padding: 10px;
+  box-sizing: border-box;
+  padding-right: 20px;
+  padding-left: 20px;
+  background-color: #d9d9d9;
+  color: usecolor(for_font_dark);
+  font-weight: bold;
+}
+.radio_group_item_login:hover,
+.radio_group_item_reg:hover {
+  opacity: 0.8;
+}
+.radio_group_item_login:active,
+.radio_group_item_reg:active {
+  opacity: 0.4;
 }
 .radio_group_item_login {
-    border-radius: 20px 0px 0px 20px;
-    border-right: 2px solid black;
+  border-radius: 20px 0px 0px 20px;
+  border-right: 2px solid black;
 }
-.radio_group_item_reg{
-    border-radius: 0px 20px 20px 0px;
-
+.radio_group_item_reg {
+  border-radius: 0px 20px 20px 0px;
 }
-.auth_form{
-    margin-bottom: 30px;
+.auth_form {
+  margin-bottom: 30px;
 }
