--- a/btmetacrit/src/components/main/slider-component/slider-component.html
+++ b/btmetacrit/src/components/main/slider-component/slider-component.html
@@ -1,41 +1,25 @@
 <div class="slider">
   @if(centerIndex() !== 0) {
-  <ng-container
-    [ngTemplateOutlet]="buttonSlider"
-    [ngTemplateOutletContext]="{ rotate: 0, offset: -1, side: 'LEFT' }"
-  />
+  <app-slider-button-component
+    side="LEFT"
+    [rotate]="0"
+    [offset]="-1"
+    (slideChange)="calculateTransform($event)"
+  ></app-slider-button-component>
   }
-
   <div class="box">
     <app-game-group-component
       [activeIndex]="centerIndex()"
-      [isRightSlide]="isRight"
+      [isRightSlide]="isRight()"
       [sliderGroups]="map()"
     />
   </div>
   @if(centerIndex() !== map().length && objects()!.length !== maxLengthCell()){
-  <ng-container
-    [ngTemplateOutlet]="buttonSlider"
-    [ngTemplateOutletContext]="{ rotate: 180, offset: 1, side: 'RIGHT' }"
-  />
+  <app-slider-button-component
+    side="RIGHT"
+    [rotate]="180"
+    [offset]="1"
+    (slideChange)="calculateTransform($event)"
+  ></app-slider-button-component>
   }
-  <ng-template
-    #buttonSlider
-    let-offset="offset"
-    let-rotate="rotate"
-    let-side="side"
-  >
-    <div class="button-container">
-      <button
-        class="slider-button"
-        type="button"
-        (click)="calculateTransform(offset, side)"
-      >
-        <i
-          class="fa-solid fa-arrow-left"
-          [style.transform]="`rotate(`+rotate+`deg`+`)`"
-        ></i>
-      </button>
-    </div>
-  </ng-template>
 </div>
