--- a/btmetacrit/src/components/main/slider-button-component/slider-button-component.scss
+++ b/btmetacrit/src/components/main/slider-button-component/slider-button-component.scss
@@ -1,3 +1,8 @@
+:host {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .button-container {
   display: flex;
   justify-content: center;
