--- a/btmetacrit/src/components/user/images-slider-component/images-slider-component.html
+++ b/btmetacrit/src/components/user/images-slider-component/images-slider-component.html
@@ -3,37 +3,25 @@
   [rotate]="0"
   [offset]="-1"
   (slideChange)="calculateTransform($event)"
+  class="left-button"
 ></app-slider-button-component>
 <div class="container">
   <ul class="images">
-    @for (img of images(); track img.id) { @if(isSlide){ @if(isRight() &&
-    isActive(img.id)) {
-    <li @slideInR class="images__item__active">
+    @for (img of images(); track img.id) { @if(isActive(img.id)) {
+    <li class="images__item__active">
       <img
-        #screen
         [src]="img.path_full"
-        [style.width]="width()"
-        [style.height]="height()"
+        [style.width.px]="width()"
+        [style.height.px]="height()"
         alt="#"
       />
     </li>
     } @else {
     <li class="images__item__passive">
       <img
-        #screen
         [src]="img.path_full"
-        [style.width]="width()"
-        [style.height]="height()"
-        alt="#"
-      />
-    </li>
-    } } @else {
-    <li class="images__item__active">
-      <img
-        #screen
-        [src]="img.path_full"
-        [style.width]="width()"
-        [style.height]="height()"
+        [style.width.px]="width()"
+        [style.height.px]="height()"
         alt="#"
       />
     </li>
@@ -45,4 +33,5 @@
   [rotate]="180"
   [offset]="1"
   (slideChange)="calculateTransform($event)"
+  class="right-button"
 ></app-slider-button-component>
