--- a/btmetacrit/src/components/user/images-slider-component/images-slider-component.scss
+++ b/btmetacrit/src/components/user/images-slider-component/images-slider-component.scss
@@ -1,16 +1,26 @@
 :host {
   display: flex;
-  width: 50%;
+  background-color: rgb(0, 0, 0);
+  border-radius: 10px 10px 0px 0px;
 }
 .container {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   overflow-x: hidden;
+  box-sizing: border-box;
+  margin: 0;
   width: 100%;
-  background-color: aqua;
+}
+.left-button {
+  margin: 0;
+}
+.right-button {
+  margin: 0;
 }
 .images {
   list-style: none;
+  width: 100%;
   display: flex;
 }
 .images__item__active {
