--- a/btmetacrit/src/components/common/button-likes-component/button-likes-component.scss
+++ b/btmetacrit/src/components/common/button-likes-component/button-likes-component.scss
@@ -1,6 +1,7 @@
 @import "../../../mixin.scss";
 
-.dont-likes .likes {
+.dont-likes,
+.likes {
   border: none;
   background-color: black;
   border-radius: 20px;
@@ -14,12 +15,19 @@
 .likes {
   background-color: white;
 }
-.likes:active .dont-likes:active {
-  background-color: plum;
+.likes:hover,
+.dont-likes:hover {
   opacity: 0.8;
+  transform: scale(1.08);
+}
+.likes:active,
+.dont-likes:active {
+  background-color: plum;
+  opacity: 0.6;
+  transform: scale(1.08);
 }
 .likes i {
-  color: usecolor(basic_dark);
+  color: red;
 }
 .dont-likes i {
   color: usecolor(basic);
