--- a/btmetacrit/src/components/user/user-liked-game/user-liked-game.scss
+++ b/btmetacrit/src/components/user/user-liked-game/user-liked-game.scss
@@ -1,12 +1,11 @@
 @import "../../../mixin.scss";
-:host {
-  width: 23%;
-}
+
 .info {
   display: flex;
   flex-direction: flex;
   justify-content: space-between;
   background-color: usecolor(basic);
+  width: 350px;
 }
 .info__title {
   display: flex;
