Add tooltip component

--- a/btmetacrit/src/app/app.html
+++ b/btmetacrit/src/app/app.html
@@ -1,3 +1,1 @@
-<app-header-component [allHints]="baseHints"/>
-<a [routerLink]="['/user', 1]">Click to redirect on user</a>
-<router-outlet/>
+<app-header-component [allHints]="baseHints" /> <router-outlet />
