--- a/btmetacrit/src/components/main/game-component/game-component.html
+++ b/btmetacrit/src/components/main/game-component/game-component.html
@@ -6,7 +6,7 @@
     [width]="imageSize()[1]"
   />
 </div>
-<div class="container-info">
+<div class="container-info" appMyTooltip>
   <div class="container-info-rating" [style.background-color]="colorRating()">
     <p>{{ rating() }}</p>
   </div>
