Continue make up tooltip

--- a/btmetacrit/src/components/main/tooltip-component/tooltip-component.html
+++ b/btmetacrit/src/components/main/tooltip-component/tooltip-component.html
@@ -1,18 +1,38 @@
-<div class="tooltip__title">
-  <h4>{{ info().title }}</h4>
+@if(conditiondisplay()){
+<div
+  #wrapper
+  class="tooltip"
+  [style.width.px]="width()"
+  [style.height.px]="height()"
+>
+  <div class="tooltip__title">
+    <h4>{{ info().title }}</h4>
+  </div>
+  @for(screen of info().imagesLinks; track screen.id) { @if(screen.id ===
+  activeIndex()){
+  <img
+    @developImg
+    [style.width.px]="width()"
+    [style.height.px]="height()"
+    class="tooltip__img"
+    [src]="screen.path_full"
+    alt="#"
+  />
+  } }
+
+  <div class="add-info">
+    <p class="tooltip__genre">{{ info().genre }}</p>
+    <p class="tooltip__date">{{ info().dateRealese }}</p>
+  </div>
+  <div class="tooltip__description">
+    <p
+      appTextLengthDirective
+      [link]="info().linkForMoreInfo"
+      [maxLength]="maxlength()"
+      class="tooltip__description"
+    >
+      {{ info().description }}
+    </p>
+  </div>
 </div>
-<img class="tooltip__img" src="" alt="#" />
-<div class="add-info">
-  <p class="tooltip__genre">{{ info().genre }}</p>
-  <p class="tooltip__date">{{ info().dateRealese }}</p>
-</div>
-<div class="tooltip__description">
-  <p
-    appTextLengthDirective
-    [link]="info().linkForMoreInfo"
-    [maxLength]="maxlength()"
-    class="tooltip__description"
-  >
-    {{ info().description }}
-  </p>
-</div>
+}
