Add tooltip component

--- a/btmetacrit/src/components/main/game-group-component/game-group-component.html
+++ b/btmetacrit/src/components/main/game-group-component/game-group-component.html
@@ -2,35 +2,13 @@
 <div class="group">
   @for(item of obj.sliderObjects; track item.id){ @if(isActive(obj.id)){
   @if(isRightSlide()){ @if(isSlide){
-  <app-game-component
-    @slideInR
-    class="active-el"
-    [imageLink]="item.imageLink"
-    [rating]="item.rating"
-    [title]="item.title"
-  />
+  <app-game-component @slideInR class="active-el" [game]="item.game" />
   } @else{
-  <app-game-component
-    class="active-el"
-    [imageLink]="item.imageLink"
-    [rating]="item.rating"
-    [title]="item.title"
-  />
+  <app-game-component class="active-el" [game]="item.game" />
   } } @else{
-  <app-game-component
-    @slideInL
-    class="active-el"
-    [imageLink]="item.imageLink"
-    [rating]="item.rating"
-    [title]="item.title"
-  />
+  <app-game-component @slideInL class="active-el" [game]="item.game" />
   } } @else {
-  <app-game-component
-    class="passive-el"
-    [imageLink]="item.imageLink"
-    [rating]="item.rating"
-    [title]="item.title"
-  />
+  <app-game-component class="passive-el" [game]="item.game" />
   } }
 </div>
 }
