--- a/btmetacrit/src/components/main/game-component/game-component.html
+++ b/btmetacrit/src/components/main/game-component/game-component.html
@@ -13,4 +13,11 @@
   <h4 class="container-info-title">{{ title() }}</h4>
   <app-button-likes-component />
 </div>
-<app-tooltip-component />
+@if(istdisplay()){
+<app-tooltip-component
+  [info]="mapToTooltip()"
+  [verticalOffset]="-100"
+  [horizontalOffset]="-200"
+  [imagechangeinterval]="2000"
+/>
+}
