Add basic components, relized slider, and begin develop image-group-component

--- a/btmetacrit/src/app/app.html
+++ b/btmetacrit/src/app/app.html
@@ -1,1 +1,3 @@
-<app-header-component [allHints]="baseHints" /> <router-outlet />
+<app-header-component [allHints]="baseHints" />
+<a [routerLink]="'/game/1'">Click for redirect on test game page</a>
+<router-outlet />
