Did make up for description component

--- a/btmetacrit/src/components/game-view/game-view-component/game-view-component.html
+++ b/btmetacrit/src/components/game-view/game-view-component/game-view-component.html
@@ -14,3 +14,7 @@
   </app-slider-bar-component>
 </div>
 </section>
+<section class="description">
+  <app-caption-component [orientation]="'start'"><p #title>Description</p></app-caption-component>
+  <app-game-view-full-description-component [description]="getDescription()"/>
+</section>
