--- a/btmetacrit/src/components/game-view/game-view-full-description-component/game-view-full-description-component.html
+++ b/btmetacrit/src/components/game-view/game-view-full-description-component/game-view-full-description-component.html
@@ -1,1 +1,6 @@
-<p>game-view-full-description-component works!</p>
+<div class="container" [style.height.px]="height()">
+    <p appTextLengthDirective [maxLength]="description().length" (func)="readMoreWithDirective($event)" >{{description()}}</p>
+</div>
+<button class="description-button" type="button" (click)="readMore()">Read more</button>
+
+
