Do some changes in services

--- a/Frontend/btmetacrit/src/components/auth/o-auth-2-button-component/o-auth-2-button-component.html
+++ b/Frontend/btmetacrit/src/components/auth/o-auth-2-button-component/o-auth-2-button-component.html
@@ -1,2 +1,3 @@
-<button type="button"><img alt="#" height="200" priority width="200" [ngSrc]="logoLink">
+<button type="button" class="icon-button">
+  <img alt="#" height="50" priority width="50" [src]="logoLink()" />
 </button>
