--- a/Frontend/btmetacrit/src/components/auth/auth-pop-up-component/auth-pop-up-component.scss
+++ b/Frontend/btmetacrit/src/components/auth/auth-pop-up-component/auth-pop-up-component.scss
@@ -19,6 +19,10 @@
   align-items: center;
   border-radius: 10px;
 }
+.oauth2_list {
+  display: flex;
+  flex-direction: row;
+}
 .container-up {
   display: flex;
   flex-direction: row;
