--- a/Frontend/btmetacrit/src/components/auth/o-auth-2-button-component/o-auth-2-button-component.scss
+++ b/Frontend/btmetacrit/src/components/auth/o-auth-2-button-component/o-auth-2-button-component.scss
@@ -1,3 +1,21 @@
-button{
-    
+:host {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.icon-button {
+  border-radius: 20px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.icon-button:hover {
+  opacity: 0.8;
+}
+.icon-button:active {
+  opacity: 0.6;
 }
